src/test/contracts/negative/error_messages/switch_contr_wild.religo
let a = (b: unit) => {
    switch Foo bar {
    | Foo => 2 
    | Bar => 1
    }
}